[tool.poetry]
name = "accelapy"
version = "0.1.0"
description = ""
authors = ["MichaelAChrisco <michaelachrisco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
httpx = "^0.27.2"
attrs = "^24.2.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
